FIX: Input word wrap (#72)

--- a/assets/stylesheets/drawer.scss
+++ b/assets/stylesheets/drawer.scss
@@ -385,7 +385,7 @@ $header-height: 2.5rem;
       width: calc(100% - 16px);
       border-radius: 4px;
       border: 1px solid var(--primary-low-mid);
-      word-break: break-all;
+      word-break: break-word;
     }
 
     .tc-composer-message-details {
